[gd_scene load_steps=16 format=3 uid="uid://iug3nyrebcte"]

[ext_resource type="Script" uid="uid://hjj6jxgosrx3" path="res://Environment/outer_wall.gd" id="1_38pn6"]
[ext_resource type="PackedScene" uid="uid://bvhx82eau62u8" path="res://Components/health_system.tscn" id="2_fcp2d"]
[ext_resource type="Texture2D" uid="uid://d2jyne7ayxkik" path="res://Assets/Environment/OuterWalls/BrokenOuterWall.png" id="4_22s3a"]
[ext_resource type="Texture2D" uid="uid://sn1fhh3r5jfs" path="res://Assets/Environment/OuterWalls/OuterWallEdge.png" id="4_fcp2d"]
[ext_resource type="PackedScene" uid="uid://kiqu37j3fo0g" path="res://Components/target_point.tscn" id="5_38pn6"]
[ext_resource type="Texture2D" uid="uid://d1581ndidnr7t" path="res://Assets/Environment/OuterWalls/BreakableOuterWallNS.png" id="5_pvxen"]
[ext_resource type="PackedScene" uid="uid://empvjc8jchgt" path="res://Components/replaceable.tscn" id="7_fcp2d"]
[ext_resource type="PackedScene" uid="uid://bwpofjjuvx0ws" path="res://Components/repairable.tscn" id="8_pvxen"]

[sub_resource type="SpriteFrames" id="SpriteFrames_483ig"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_fcp2d")
}, {
"duration": 1.0,
"texture": ExtResource("5_pvxen")
}, {
"duration": 1.0,
"texture": ExtResource("4_22s3a")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nlf3o"]
size = Vector2(16, 16.0145)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_38pn6"]
size = Vector2(512, 256)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_22s3a"]
size = Vector2(16, 17)

[sub_resource type="NavigationPolygon" id="NavigationPolygon_22s3a"]
vertices = PackedVector2Array(4, 8, -4, 8, -4, -8, 4, -8)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-4, -8, 4, -8, 4, 8, -4, 8)])
agent_radius = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_axysy"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fcp2d"]
size = Vector2(16, 16)

[node name="OuterWall" type="StaticBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource("1_38pn6")
metadata/_edit_group_ = true

[node name="HealthSystem" parent="." node_paths=PackedStringArray("sprite") instance=ExtResource("2_fcp2d")]
maxHealth = 100
sprite = NodePath("../AnimatedSprite2D")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_483ig")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.0072732)
shape = SubResource("RectangleShape2D_nlf3o")

[node name="Inside" type="Node2D" parent="."]
position = Vector2(0, 32)

[node name="TargetPoint" parent="." instance=ExtResource("5_38pn6")]
position = Vector2(0, -9)

[node name="DestroyedFunnelArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="DestroyedFunnelArea"]
position = Vector2(0, -136)
shape = SubResource("RectangleShape2D_38pn6")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="DestroyedFunnelArea"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_22s3a")

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
visible = false
navigation_polygon = SubResource("NavigationPolygon_22s3a")
enabled = false

[node name="ZomFunnelTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Replaceable" parent="." node_paths=PackedStringArray("replaceableObject") instance=ExtResource("7_fcp2d")]
visible = false
replaceableObject = NodePath("..")
friendlyName = "Wall"
timeToReplace = 4.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Replaceable"]
shape = SubResource("RectangleShape2D_axysy")

[node name="Repairable" parent="." node_paths=PackedStringArray("repairableObject") instance=ExtResource("8_pvxen")]
visible = false
repairableObject = NodePath("..")
friendlyName = "Wall"
timeToRepair = 0.5
repairAmount = 10.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Repairable"]
shape = SubResource("RectangleShape2D_fcp2d")

[connection signal="healthChanged" from="HealthSystem" to="." method="_on_health_system_health_changed"]
[connection signal="timeout" from="ZomFunnelTimer" to="." method="_on_zom_funnel_timer_timeout"]
